add students info

--- a/index.html
+++ b/index.html
@@ -284,13 +284,13 @@
                     <p><strong class="blue">👨‍🏫 Giảng viên hướng dẫn:</strong> ThS. Tạ Thu Thủy</p>
                     <p class="mt-small"><strong class="green">👨‍🎓 Nhóm sinh viên thực hiện:</strong></p>
                     <div class="mt-small">
-                        <p class="small">Nguyễn Văn A - 20520001</p>
-                        <p class="small">Trần Thị B - 20520002</p>
-                        <p class="small">Lê Văn C - 20520003</p>
+                        <p class="small">Lý Đức Minh - 24730045</p>
+                        <p class="small">Ngô Văn Tuấn - 24730077</p>
+                        <p class="small">Ngô Thanh Thịnh - 24730068</p>
                     </div>
                 </div>
                 <div style="position: absolute; bottom: 30px; left: 0; right: 0;">
-                    <p class="small">📍 TP. Hồ Chí Minh, 12/2024</p>
+                    <p class="small">📍 TP. Hồ Chí Minh, 09/2025</p>
                 </div>
             </section>
 
@@ -980,45 +980,44 @@
                 <div class="mt-small">
                     <p class="small">
                         <strong>Liên hệ:</strong><br>
-                        📧 student@uit.edu.vn<br>
-                        🌐 GitHub Repository<br>
+                        🌐 <a href="https://github.com/ThinhNgo96/splunk_examples" target="_blank"
+                            rel="noopener noreferrer">GitHub Repository</a><br>
                         📱 Demo & Source Code
                     </p>
                 </div>
                 <p class="highlight mt-small">Splunk: Biến dữ liệu thành thông tin có giá trị!</p>
             </section>
         </div>
-    </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reveal.min.js"></script>
-    <script>
-        Reveal.initialize({
-            hash: true,
-            transition: 'slide',
-            transitionSpeed: 'default',
-            backgroundTransition: 'fade',
-            controls: true,
-            progress: true,
-            center: true,
-            touch: true,
-            loop: false,
-            rtl: false,
-            fragments: true,
-            embedded: false,
-            help: true,
-            showNotes: false,
-            autoSlide: 0,
-            autoSlideStoppable: true,
-            mouseWheel: false,
-            hideAddressBar: true,
-            previewLinks: false,
-            viewDistance: 3,
-            parallaxBackgroundImage: '',
-            parallaxBackgroundSize: '',
-            parallaxBackgroundHorizontal: null,
-            parallaxBackgroundVertical: null
-        });
-    </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reveal.min.js"></script>
+        <script>
+            Reveal.initialize({
+                hash: true,
+                transition: 'slide',
+                transitionSpeed: 'default',
+                backgroundTransition: 'fade',
+                controls: true,
+                progress: true,
+                center: true,
+                touch: true,
+                loop: false,
+                rtl: false,
+                fragments: true,
+                embedded: false,
+                help: true,
+                showNotes: false,
+                autoSlide: 0,
+                autoSlideStoppable: true,
+                mouseWheel: false,
+                hideAddressBar: true,
+                previewLinks: false,
+                viewDistance: 3,
+                parallaxBackgroundImage: '',
+                parallaxBackgroundSize: '',
+                parallaxBackgroundHorizontal: null,
+                parallaxBackgroundVertical: null
+            });
+        </script>
 </body>
 
 </html>
